; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_frame_rate_data_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_frame_rate_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame_rate_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.frame_rate_data*)* @frame_rate_data_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frame_rate_data_free(%struct.frame_rate_data* %0) #0 {
  %2 = alloca %struct.frame_rate_data*, align 8
  store %struct.frame_rate_data* %0, %struct.frame_rate_data** %2, align 8
  %3 = load %struct.frame_rate_data*, %struct.frame_rate_data** %2, align 8
  %4 = call i32 @frame_rate_data_options_free(%struct.frame_rate_data* %3)
  %5 = load %struct.frame_rate_data*, %struct.frame_rate_data** %2, align 8
  %6 = call i32 @frame_rate_data_ranges_free(%struct.frame_rate_data* %5)
  %7 = load %struct.frame_rate_data*, %struct.frame_rate_data** %2, align 8
  %8 = getelementptr inbounds %struct.frame_rate_data, %struct.frame_rate_data* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @da_free(i32 %9)
  %11 = load %struct.frame_rate_data*, %struct.frame_rate_data** %2, align 8
  %12 = getelementptr inbounds %struct.frame_rate_data, %struct.frame_rate_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @da_free(i32 %13)
  ret void
}

declare dso_local i32 @frame_rate_data_options_free(%struct.frame_rate_data*) #1

declare dso_local i32 @frame_rate_data_ranges_free(%struct.frame_rate_data*) #1

declare dso_local i32 @da_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
